src/objects/KS_Obra__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Es el objeto superior que agrega las ofertas (oportunidades)</description>
    <fields>
        <fullName>Descriptivo_Obra__c</fullName>
        <formula>right(Name,len(Name)-find(&quot;-&quot;,Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descriptivo Obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Actividad__c</fullName>
        <label>ID Actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Autor_del_proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Autor del proyecto</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Obras (Autor del proyecto)</relationshipLabel>
        <relationshipName>Obras1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_postal_autor__c</fullName>
        <label>Código postal autor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_postal_constructor__c</fullName>
        <label>Código postal constructor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_postal_oportunidad__c</fullName>
        <label>Código postal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_postal_promotor__c</fullName>
        <label>Código postal promotor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Condicion_de_obra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condición de obra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Constructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constructor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Obras (Constructor)</relationshipLabel>
        <relationshipName>Obras2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Coordinador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinador</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Obras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_Comentarios_oportunidades__c</fullName>
        <label>Descripción / Comentarios</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Direccion__c</fullName>
        <label>Dirección</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Direccion_del_autor_del_proyecto__c</fullName>
        <label>Dirección del autor del proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Direccion_del_constructor__c</fullName>
        <label>Dirección del constructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Direccion_oportunidad__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Direccion_promotor__c</fullName>
        <label>Dirección promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Duracion_meses__c</fullName>
        <label>Duración (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Duracion_meses_oportunidades__c</fullName>
        <label>Duración (meses)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Email_constructor__c</fullName>
        <label>Email constructor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KS_Email_promotor__c</fullName>
        <label>Email promotor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KS_Fase__c</fullName>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proyecto</fullName>
                    <default>true</default>
                    <label>Proyecto</label>
                </value>
                <value>
                    <fullName>Obra</fullName>
                </value>
                <value>
                    <fullName>Parada</fullName>
                </value>
                <value>
                    <fullName>Finalizada</fullName>
                </value>
                <value>
                    <fullName>Abandonada / Desestimada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fase_construdatos__c</fullName>
        <label>Fase (construdatos)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Fase_construdatos</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_Inaguracion__c</fullName>
        <label>Fecha inauguración</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_conversion__c</fullName>
        <label>Fecha conversión</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_inicio__c</fullName>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_inicio_oportunidades__c</fullName>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_notificacion__c</fullName>
        <label>Fecha de notificación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_publicacion__c</fullName>
        <label>Fecha de publicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Id_Obra__c</fullName>
        <displayFormat>OB-{00000}</displayFormat>
        <label>Id Obra</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KS_Id_obra_Construdatos__c</fullName>
        <externalId>true</externalId>
        <label>Id obra Construdatos</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_L_nea_de_negocio__c</fullName>
        <description>Creado 11.05.2018 para desarrollo informes</description>
        <label>Línea de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Linea_de_negocio_obra</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Marca__c</fullName>
        <label>Marca Ubicación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Motivos__c</fullName>
        <label>Motivo de abandono</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Fase__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Motivo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_NIF_Promotor__c</fullName>
        <label>NIF Promotor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_NIF_autor__c</fullName>
        <label>NIF autor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_NIF_constructor__c</fullName>
        <label>NIF constructor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_agente__c</fullName>
        <formula>KS_agente_mas_influyente__r.KS_Interviniente__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre agente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_autor_del_proyecto__c</fullName>
        <label>Nombre autor del proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_del_constructor__c</fullName>
        <label>Nombre del constructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_del_promotor__c</fullName>
        <label>Nombre del promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_viviendas__c</fullName>
        <label>Número de viviendas</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_viviendas_oportunidades__c</fullName>
        <label>Número de viviendas</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Obra_matriz__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra matriz</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Obras</relationshipLabel>
        <relationshipName>Obras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Obra_protegida__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Una obra protegida es aquella en la que tenemos un acuerdo comercial cerrado con un distribuidor específico para que tramite el pedido de la operación. •	La obra protegida siempre tendrá dos ofertas, la genérica con dtos base para enviar por cualquier comercial a quien nos la solicite y la protegida que solo podrá ser enviada por el comercial que la ha creado.</description>
        <label>Obra protegida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Origen_de_la_Obra__c</fullName>
        <label>Origen de la Obra(OLD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Origen_obra</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISOCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Pais_oportunidad__c</fullName>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISOCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Poblacion__c</fullName>
        <label>Población</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Poblacion_autor__c</fullName>
        <label>Poblacion autor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Poblacion_del_constructor__c</fullName>
        <label>Población del constructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Poblacion_oportunidad__c</fullName>
        <label>Población</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Poblacion_promotor__c</fullName>
        <label>Población promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Presupuesto__c</fullName>
        <label>Presupuesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Promotor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Obras</relationshipLabel>
        <relationshipName>Obras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Provincia__c</fullName>
        <label>Provincia</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Provincia_autor__c</fullName>
        <label>Provincia autor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Provincia_del_constructor__c</fullName>
        <label>Provincia del constructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Provincia_oportunidad__c</fullName>
        <label>Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Provincia_promotor__c</fullName>
        <label>Provincia promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Proximo_seguimiento__c</fullName>
        <label>F. Última Actualización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Scoring__c</fullName>
        <label>Scoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Potencial_Relacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Segmento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Segmento_construdatos__c</fullName>
        <label>Actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sub_Segmento__c</fullName>
        <label>Tipo de edificio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Sub_segmento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Superficie_m2__c</fullName>
        <label>Superfície (m2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Superficie_oportunidades__c</fullName>
        <label>Superficie (m2)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Telefono_autor__c</fullName>
        <label>Teléfono autor</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KS_Telefono_del_constructor__c</fullName>
        <label>Teléfono del constructor</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KS_Telefono_promotor__c</fullName>
        <label>Teléfono promotor</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_edificio__c</fullName>
        <label>Tipo de edificio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_obra__c</fullName>
        <label>Tipo de obra</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_de_obra</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_promotor__c</fullName>
        <label>Tipo de promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_proyecto__c</fullName>
        <label>Tipo de proyecto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nueva</fullName>
                </value>
                <value>
                    <fullName>Reforma</fullName>
                </value>
                <value>
                    <fullName>Ampliación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KS_URL_plataforma_contratacion__c</fullName>
        <label>URL plataforma contratación</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KS_Ubicaciones_COUNT__c</fullName>
        <label>Ubicaciones (COUNT)</label>
        <summaryForeignKey>KS_Obra_Ubicacion__c.KS_Obra__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Usuario_conversor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario conversor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Obras1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Website_autor__c</fullName>
        <label>Website autor</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KS_Website_constructor__c</fullName>
        <label>Website constructor</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KS_Website_promotor__c</fullName>
        <label>Website promotor</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KS_agente_mas_influyente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente más influyente</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El interviniente que esta buscando no aparece como interviniente de la obra</errorMessage>
            <filterItems>
                <field>KS_Intervinientes__c.KS_Obra__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KS_Intervinientes__c</referenceTo>
        <relationshipLabel>Obras</relationshipLabel>
        <relationshipName>Obras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_email_autor__c</fullName>
        <label>Email autor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_Approv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluvia Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_Approv_icon__c</fullName>
        <formula>IF (  KS_hasFluvia__c = FALSE, &quot;&quot;,
IF(  KS_hasFluvia_Approv__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fluvia - Aprobación oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluvia Protegido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_Protected_icon__c</fullName>
        <formula>IF ( KS_hasFluvia_Protected__c = FALSE, &quot;&quot;, 
IF( AND(KS_hasFluvia_Protected__c = TRUE,KS_hasFluvia_Approv__c = TRUE), IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fluvia - Obra protegida</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluvia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_condicion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluvia Condición de Obra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasFluvia_condicion_icon__c</fullName>
        <formula>IF ( KS_hasFluvia__c = FALSE, &quot;&quot;,
IF(  KS_hasFluvia_condicion__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fluvia - Condición de obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_Approv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lighting Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_Approv_icon__c</fullName>
        <formula>IF ( KS_hasLighting__c = FALSE, &quot;&quot;,
IF(  KS_hasLighting_Approv__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lighting - Aprobación oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lighting Protegido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_Protected_icon__c</fullName>
        <formula>IF ( KS_hasLighting_Protected__c = FALSE, &quot;&quot;, 
IF( AND(KS_hasLighting_Protected__c = TRUE,KS_hasLighting_Approv__c = TRUE), IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lighting - Obra protegida</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lighting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_condicion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lighting Condición de Obra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasLighting_condicion_icon__c</fullName>
        <formula>IF ( KS_hasLighting__c = FALSE, &quot;&quot;,
IF(  KS_hasLighting_condicion__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lighting - Condición de obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_Approv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simon Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_Approv_icon__c</fullName>
        <formula>IF ( KS_hasSimon__c = FALSE, &quot;&quot;, 
IF(  KS_hasSimon_Approv__c = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Simon - Aprobación oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simon Protegido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_Protected_icon__c</fullName>
        <formula>IF ( KS_hasSimon_Protected__c = FALSE, &quot;&quot;, 
IF( AND(KS_hasSimon_Protected__c = TRUE,KS_hasSimon_Approv__c = TRUE), IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Simon - Obra protegida</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_condicion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simon Condición de Obra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_hasSimon_condicion_icon__c</fullName>
        <formula>IF ( KS_hasSimon__c = FALSE, &quot;&quot;,
IF(  KS_hasSimon_condicion__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Simon - Condición de obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Ext__c</fullName>
        <label>Nombre Extendido</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SI_Codigo_Zona_Construdatos__c</fullName>
        <label>Código Zona Construdatos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Fecha_Alta_construdatos__c</fullName>
        <label>Fecha Alta Construdatos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SI_Id_Autor_Construdatos__c</fullName>
        <label>Id Autor Construdatos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Id_Constructor_Construdatos__c</fullName>
        <label>Id Constructor Construdatos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Id_Construdatos_BD_Obra__c</fullName>
        <label>Id Construdatos BD Obra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Id_Construdatos_BD_Proyecto__c</fullName>
        <label>Id Construdatos BD Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_Id_Promotor_Construdatos__c</fullName>
        <label>Id Promotor Construdatos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_OrigenObra__c</fullName>
        <label>Origen de la Obra</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Carga Manual</fullName>
                </value>
                <value>
                    <fullName>Cliente Final</fullName>
                </value>
                <value>
                    <fullName>Construdatos</fullName>
                </value>
                <value>
                    <fullName>Instalador / Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Prescriptor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_SubSegmento__c</fullName>
        <description>Campo que contiene la picklist del tipo de edificio a nivel de campo.</description>
        <label>Tipo de edificio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academias de Enseñanza</fullName>
                </value>
                <value>
                    <fullName>Acuarios</fullName>
                </value>
                <value>
                    <fullName>Agencia de Viajes</fullName>
                </value>
                <value>
                    <fullName>Albergues</fullName>
                </value>
                <value>
                    <fullName>Alojamientos Rurales</fullName>
                </value>
                <value>
                    <fullName>Alquiler Automóbiles</fullName>
                </value>
                <value>
                    <fullName>Aparcamientos</fullName>
                </value>
                <value>
                    <fullName>Apartamentos Turísticos</fullName>
                </value>
                <value>
                    <fullName>Areas de descanso</fullName>
                </value>
                <value>
                    <fullName>Auditorios</fullName>
                </value>
                <value>
                    <fullName>Balnearios</fullName>
                </value>
                <value>
                    <fullName>Bancos y cajas</fullName>
                </value>
                <value>
                    <fullName>Bibliotecas</fullName>
                </value>
                <value>
                    <fullName>Bodegas</fullName>
                </value>
                <value>
                    <fullName>Bolsos</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Campos de fútbol</fullName>
                </value>
                <value>
                    <fullName>Campos de Golf</fullName>
                </value>
                <value>
                    <fullName>Casetas modulares</fullName>
                </value>
                <value>
                    <fullName>Casinos</fullName>
                </value>
                <value>
                    <fullName>Castillos y Palacios</fullName>
                </value>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Centros Culturales</fullName>
                </value>
                <value>
                    <fullName>Centros de Día</fullName>
                </value>
                <value>
                    <fullName>Centros de Salud</fullName>
                </value>
                <value>
                    <fullName>Centros Invierno</fullName>
                </value>
                <value>
                    <fullName>Centros Penitenciarios</fullName>
                </value>
                <value>
                    <fullName>Cines</fullName>
                </value>
                <value>
                    <fullName>Clínicas</fullName>
                </value>
                <value>
                    <fullName>Clínicas Dentales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_address_old__c</fullName>
        <description>normalización de los campos de dirección con Tassis</description>
        <label>address_old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Obra</label>
    <listViews>
        <fullName>KS_Mis_Obras</fullName>
        <columns>NAME</columns>
        <columns>KS_Fase__c</columns>
        <columns>KS_Sub_Segmento__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>KS_Direccion__c</columns>
        <columns>KS_Poblacion__c</columns>
        <columns>KS_Codigo_Postal__c</columns>
        <columns>KS_Pais__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Obras</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Obras_Construdatos</fullName>
        <columns>KS_Id_obra_Construdatos__c</columns>
        <columns>SI_Id_Construdatos_BD_Proyecto__c</columns>
        <columns>SI_Id_Construdatos_BD_Obra__c</columns>
        <columns>SI_Fecha_Alta_construdatos__c</columns>
        <columns>KS_Proximo_seguimiento__c</columns>
        <columns>NAME</columns>
        <columns>KS_Nombre_del_promotor__c</columns>
        <columns>KS_Nombre_autor_del_proyecto__c</columns>
        <columns>KS_Nombre_del_constructor__c</columns>
        <columns>KS_Fecha_de_publicacion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>KS_Fecha_de_inicio__c</columns>
        <columns>KS_Duracion_meses__c</columns>
        <columns>KS_Codigo_Postal__c</columns>
        <columns>KS_Poblacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>KS_Obra__c.KS_Construdatos</value>
        </filters>
        <label>Obras Construdatos</label>
        <language>es</language>
    </listViews>
</CustomObject>